--- a/v2.ipynb
+++ b/v2.ipynb
@@ -232,14 +232,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Net(\n",
+      "  (fc1): Linear(in_features=784, out_features=512, bias=True)\n",
+      "  (fc2): Linear(in_features=512, out_features=512, bias=True)\n",
+      "  (fc3): Linear(in_features=512, out_features=10, bias=True)\n",
+      "  (dropout): Dropout(p=0.2, inplace=False)\n",
+      ")\n"
+     ]
+    }
+   ],
    "source": [
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
     "\n",
-    "class Net()"
+    "# 这里的nn 是一个python module，这个module \n",
+    "class Net(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(Net,self).__init__()\n",
+    "        # 定义第一个隐含层和第二个隐含层的神经元个数\n",
+    "        hidden_1 = 512\n",
+    "        hidden_2 = 512\n",
+    "\n",
+    "        # 输入层到隐含层，输入维度为 784,输出维度为 hidden_1\n",
+    "        self.fc1 = nn.Linear(28*28,hidden_1)\n",
+    "        # 第一层隐含层到第二层隐含层，输入维度为 hidden_1, 输出维度为 hidden_2\n",
+    "        self.fc2 = nn.Linear(hidden_1,hidden_2)\n",
+    "        # 第二层隐藏层到输出层，输入维度为 hidden_2,输出维度为10\n",
+    "        self.fc3 = nn.Linear(hidden_2,10)\n",
+    "        # 定义 Dropout 率为 0.2 防止过拟合\n",
+    "        self.dropout = nn.Dropout(0.2)\n",
+    "    def forward(self,x):\n",
+    "        # 将原始图片拉平成 784 维的长向量\n",
+    "        x = x.view(-1,28*28)\n",
+    "        # 经过第一层隐藏层，激活函数为relu\n",
+    "        x = F.relu(self.fc1(x))\n",
+    "        # Dropout 层\n",
+    "        x = self.dropout(x)\n",
+    "        # 经过第二层隐藏层，激活函数为relu\n",
+    "        x = F.relu(self.fc2(x))\n",
+    "        # Droupout 层\n",
+    "        x = self.dropout(x)\n",
+    "        # 输出层\n",
+    "        x = self.fc3(x)\n",
+    "        return x\n",
+    "\n",
+    "# 实例化模型，打印模型信息\n",
+    "model = Net()\n",
+    "print(model)"
    ]
   },
   {
@@ -247,21 +293,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "print"
+   ]
   },
   {
    "cell_type": "code",
